desktop overflow x bug fixed

--- a/public/src/App.module.css
+++ b/public/src/App.module.css
@@ -1,4 +1,3 @@
 .App {
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
